data/css/style.css
.form-signin input[type="text"] {
	margin-bottom: -1px;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
}

.form-signin input[type="password"] {
	margin-bottom: 10px;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}

.form-signin a,
.form-signin a:visited,
.form-signin a:active {
	color: inherit !important;
}

.login-page {
	max-width: 300px;
}

.divider {
	height:50px;
	margin:0 9px;
	border-left:1px solid #e1e1e1;
}
@media (max-width: 768px) {
	.dont-float {
		float: left;
		margin-top: 0;
		margin-bottom: 0;
	}
	.dont-float > li {
		float: left;
	}
	.dont-float > li > a {
		padding-top: 15px;
		padding-bottom: 15px;
	}
	.dont-float:first-child {
		margin-left: 0px;
	}
	.dont-float.navbar-right:last-child {
		margin-right: -15px;
	}
}

.nav-history {
	margin-bottom: 1em;
}

.navbar-paste {
	margin-bottom: 0;
}

.inline-input {
	width: 200px;
}

.navbar-nav > li > .dropdown-menu {
	margin-top: 2px;
}

.anchor {
	visibility: hidden;
	padding-top: 20px;
	margin-top: -20px;
}

@media (max-width: 767px) {
	.navbar-fixed-top {
		position: relative;
	}
}

@media (min-width: 768px) {
	.anchor {
		visibility: hidden;
		padding-top: 60px;
		margin-top: -60px;
	}

	#navbar-height {
		height: 70px;
	}
}

textarea.text-upload {
	height: 200px;
}

@media (min-height: 700px) {
	textarea.text-upload {
		height: 300px;
	}
}

@media (min-height: 800px) {
	textarea.text-upload {
		height: 400px;
	}
}

.error h1 {
	font-size: 19px;
}

.nowrap {
	white-space: nowrap;
}

.wrap {
	word-break: break-word;
	word-wrap: normal;
}

code, pre, textarea {
	font-family: "Dejavu sans mono", Monaco, monospace;
}

.content {
	width: 100%;
	background: #fff;
}

/* Sticky footer styles
 * Source: http://twitter.github.io/bootstrap/examples/sticky-footer.html
 -------------------------------------------------- */
.footer {
	background-color: #f5f5f5;
	border-top: 1px solid #e5e5e5;
	/*padding: 30px 0;*/
	/*margin-top: 70px;*/
	text-align: center;
}


html,
body {
	height: 100%;
	/* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	/* Negative indent footer by it's height */
	margin: 0 auto -83px;
}

/* Set the fixed height of the footer here */
#footer {
	height: 83px;
	font-size: 12px;
	padding: 15px 0;
}

#footer,
#footer li {
	line-height: 12px;
}

/* Set to footer height + 70px "padding" */
#push {
	height: 153px;
}

#footer p,
.footer-links {
	margin: 4px 0;
}
.footer-links li {
	display: inline;
	padding: 0 2px;
}
.footer-links li:first-child {
	padding-left: 0;
}

.paste-container {
	padding-top: 40px;
	background: #eee;
	padding: 3px;
	max-width: 100%;
	margin-left: 20px;
	margin-right: 20px;
}

.code pre {
	counter-reset: line-numbering;
}

.code {display: table; margin: 0;}
.code .table-row {display: table-row;}
.code .table-cell {display: table-cell;}

.code pre a.linenumber {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.code pre a.linenumber::before {
	content: counter(line-numbering);
	counter-increment: line-numbering;
}

.code pre a.linenumber {
	padding: 0 6px 0 16px;
	text-align: right;
	background: #ececec;
	border-right: 1px solid #ddd;
	text-align: right;
	margin-left: -2px;
	color: #aaa;
	word-break: normal;
}

.code pre :last-child a {
	padding-bottom: 10px;
}

.code pre :first-child a {
	padding-top: 10px;
}

.code pre .table-row .line {
	padding-left: 10px;
	width: 100%
}

.content .highlight > pre {
	background-color: transparent;
	border: 0;
	border-radius: 0;
	margin: 0;
	padding: 0;
	font-size: 12px;
	line-height: 1.4;
	white-space: pre-wrap;
	word-break: break-word;
	word-wrap: normal;
}
.code {
	width: 100%;
	padding-top: 0;
}
.code .highlight {
	position: relative;
	padding-left: 0;
}
.code .highlight pre {
	position: relative;
}
.highlight_line {
	background: #ffffcc;
}
#file-info {
	display: none;
}

.ui-autocomplete {
	z-index: 1500;
}

.popover {
	word-break: break-word;
	word-wrap: normal;
}

.upload_history_thumbnails {
	margin: 0 auto;
	padding-bottom: 50px;
}

.upload_history_thumbnails img.thumb,
.upload_history_thumbnails a {
	width: 150px;
	height: 150px;
}

.upload_history_thumbnails a {
	margin: 1px;
	display: inline-block;
}

.upload_history_thumbnails .marked {
	background: red;
}

.upload_history_thumbnails .marked img {
	opacity: 0.4;
}


/* highlighting theme */
.hll { background-color: #ffffcc }
.c { color: #999988; font-style: italic } /* Comment */
.err { color: #a61717; background-color: #e3d2d2 } /* Error */
.k { color: #000000; font-weight: bold } /* Keyword */
.o { color: #000000; font-weight: bold } /* Operator */
.cm { color: #999988; font-style: italic } /* Comment.Multiline */
.cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
.c1 { color: #999988; font-style: italic } /* Comment.Single */
.cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.ge { color: #000000; font-style: italic } /* Generic.Emph */
.gr { color: #aa0000 } /* Generic.Error */
.gh { color: #999999 } /* Generic.Heading */
.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.go { color: #888888 } /* Generic.Output */
.gp { color: #555555 } /* Generic.Prompt */
.gs { font-weight: bold } /* Generic.Strong */
.gu { color: #aaaaaa } /* Generic.Subheading */
.gt { color: #aa0000 } /* Generic.Traceback */
.kc { color: #000000; font-weight: bold } /* Keyword.Constant */
.kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
.kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
.kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
.kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
/* ... */

